Small wizard alignment fix

--- a/src/main/webapp/css/custom/bootstrap.wizard.css
+++ b/src/main/webapp/css/custom/bootstrap.wizard.css
@@ -36,7 +36,7 @@
   width: 40px;
   height: 40px;
   border: 5px solid #C2C2C2;
-  line-height: 30px;
+  line-height: 32px;
   border-radius: 100%;
   background-color: #FFF;
 }
